--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "better-react-carousel": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
-    "styled-components": "^^4.4.1"
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
